fix: fixngin gap on social media in footer section

--- a/src/features/home/components/Footer/footer.module.css
+++ b/src/features/home/components/Footer/footer.module.css
@@ -92,4 +92,8 @@
   .singup h1 {
     font-size: var(--heading-32);
   }
+
+  .socilaMedia {
+    gap: 24;
+  }
 }
